ADD_LIBRARY(modules
	AnonymizerCfg.cpp
	SensorManagerCfg.cpp
	ConfigManager.cpp
	idmef/IDMEFExporter.cpp
	idmef/IDMEFExporterCfg.cpp
	idmef/IDMEFMessage.cpp
	idmef/PacketIDMEFReporter.cpp
	idmef/PacketIDMEFReporterCfg.cpp

	analysis/AutoFocus.cpp
	analysis/autofocus_report.cpp
	analysis/autofocus_attribute.cpp
	analysis/autofocus_iprecord.h
	analysis/TRWPortscanDetector.cpp
	analysis/RBSWormDetector.cpp
	analysis/FrontPayloadSigMatcher.cpp
	# support files for FrontPayloadSigMatcher
	analysis/fpsigmatcher/KTree.c
	analysis/fpsigmatcher/Matcher.c
	analysis/fpsigmatcher/Signature.c
	analysis/fpsigmatcher/Utils.c
	analysis/FrontPayloadSigMatcherCfg.cpp
	analysis/AutoFocusCfg.cpp
	analysis/RBSWormDetectorCfg.cpp
	analysis/TRWPortscanDetectorCfg.cpp

	packet/Observer.cpp
	packet/ObserverCfg.cpp
	packet/Packet.cpp
	packet/Template.cpp
	packet/PCAPExporterModule.cpp
	packet/PSAMPExporterModule.cpp
	packet/PSAMPExporterCfg.cpp
	packet/PCAPExporterCfg.cpp
	packet/PacketReportingCfg.cpp
	packet/filter/FilterModule.cpp
	packet/filter/PacketFilterCfg.cpp
	packet/filter/IPHeaderFilter.cpp
	packet/filter/RandomSampler.cpp
	packet/filter/RegExFilter.cpp
	packet/filter/StringFilter.cpp
	packet/filter/SystematicSampler.cpp
	packet/filter/ConnectionFilter.cpp
	packet/filter/StateConnectionFilter.cpp
	packet/filter/AnonFilter.cpp
	packet/filter/PayloadFilter.cpp

	ipfix/IpfixCollectorCfg.cpp
	ipfix/IpfixDbReaderCfg.cpp
	ipfix/IpfixDbWriterCfg.cpp
	ipfix/IpfixDbWriterPgCfg.cpp
	ipfix/IpfixExporterCfg.cpp
	ipfix/IpfixPayloadWriterCfg.cpp
	ipfix/IpfixPrinterCfg.cpp
	ipfix/IpfixSamplerCfg.cpp
	ipfix/Connection.cpp
	ipfix/IpfixReceiverUdpIpV4.cpp
	ipfix/IpfixReceiverSctpIpV4.cpp
	ipfix/IpfixRawdirReader.cpp
	ipfix/IpfixReceiver.cpp
	ipfix/IpfixRecord.cpp
	ipfix/IpfixPrinter.cpp
	ipfix/IpfixParser.cpp
	ipfix/IpfixCollector.cpp
	ipfix/IpfixSender.cpp
	ipfix/IpfixRawdirWriter.cpp
	ipfix/TemplateBuffer.cpp
	ipfix/IpfixDbReader.cpp
	ipfix/IpfixDbWriter.cpp
	ipfix/IpfixDbWriterPg.cpp
	ipfix/IpfixRecordDestination.cpp
	ipfix/IpfixSampler.cpp
	ipfix/IpfixPayloadWriter.cpp
	ipfix/aggregator/PacketAggregatorCfg.cpp
	ipfix/aggregator/AggregatorBaseCfg.cpp
	ipfix/aggregator/IpfixAggregatorCfg.cpp
	ipfix/aggregator/BaseAggregator.cpp
	ipfix/aggregator/BaseHashtable.cpp
	ipfix/aggregator/PacketHashtable.cpp
	ipfix/aggregator/FlowHashtable.cpp
	ipfix/aggregator/IpfixAggregator.cpp
	ipfix/aggregator/PacketAggregator.cpp
	ipfix/aggregator/Rules.cpp
	ipfix/aggregator/Rule.cpp
)

