ADD_LIBRARY(modules
    AnonymizerCfg.cpp
    SensorManagerCfg.cpp
    ConfigManager.cpp
    idmef/IDMEFExporter.cpp
    idmef/IDMEFExporterCfg.cpp
    idmef/IDMEFMessage.cpp
    idmef/PacketIDMEFReporter.cpp
    idmef/PacketIDMEFReporterCfg.cpp
    
    analysis/autofocus_attribute.cpp
    analysis/AutoFocus.cpp
    analysis/autofocus_iprecord.h
    analysis/autofocus_report.cpp
    analysis/FrontPayloadSigMatcher.cpp
    analysis/P2PDetector.cpp
    analysis/RBSWormDetector.cpp
    analysis/TRWPortscanDetector.cpp
    analysis/AutoFocusCfg.cpp
    analysis/FrontPayloadSigMatcherCfg.cpp
    analysis/P2PDetectorCfg.cpp
    analysis/RBSWormDetectorCfg.cpp
    analysis/TRWPortscanDetectorCfg.cpp
    analysis/HostStatistics.cpp
    analysis/Host.cpp
    analysis/HostStatisticsCfg.cpp
    analysis/FlowLenAnalyzer.cpp
    analysis/FlowLenAnalyzerCfg.cpp
    # support files for FrontPayloadSigMatcher
    analysis/fpsigmatcher/KTree.c
    analysis/fpsigmatcher/Matcher.c
    analysis/fpsigmatcher/Signature.c
    analysis/fpsigmatcher/Utils.c
    
    packet/Observer.cpp
    packet/ObserverCfg.cpp
    packet/Packet.cpp
    packet/Template.cpp
    packet/PCAPExporterBase.cpp
    packet/PCAPExporterFile.cpp
    packet/PCAPExporterPipe.cpp
    packet/PSAMPExporterModule.cpp
    packet/PSAMPExporterCfg.cpp
    packet/PCAPExporterPipeCfg.cpp
    packet/PCAPExporterFileCfg.cpp
    packet/PacketReportingCfg.cpp
    packet/filter/FilterModule.cpp
    packet/filter/PacketFilterCfg.cpp
    packet/filter/IPHeaderFilter.cpp
    packet/filter/RandomSampler.cpp
    packet/filter/RegExFilter.cpp
    packet/filter/StringFilter.cpp
    packet/filter/SystematicSampler.cpp
    packet/filter/ConnectionFilter.cpp
    packet/filter/StateConnectionFilter.cpp
    packet/filter/AnonFilter.cpp
    packet/filter/PayloadFilter.cpp
    packet/filter/HostFilter.cpp
    
    ipfix/FpaPcapExporter.cpp
    ipfix/FpaPcapExporterCfg.cpp
    ipfix/FpaPacketGenerator.cpp
    ipfix/FpaPacketGeneratorCfg.cpp
    ipfix/IpfixCollectorCfg.cpp
    ipfix/IpfixCsExporter.cpp
    ipfix/IpfixCsExporterCfg.cpp
    ipfix/IpfixExporterCfg.cpp
    ipfix/IpfixFileWriter.cpp
    ipfix/IpfixFileWriterCfg.cpp
    ipfix/IpfixNetflowExporter.cpp
    ipfix/IpfixNetflowExporterCfg.cpp
    ipfix/IpfixPayloadWriterCfg.cpp
    ipfix/IpfixPrinterCfg.cpp
    ipfix/IpfixSamplerCfg.cpp
    ipfix/NetflowV9ConverterCfg.cpp
    ipfix/Connection.cpp
    ipfix/IpfixReceiverUdpIpV4.cpp
    ipfix/IpfixReceiverSctpIpV4.cpp
    ipfix/IpfixReceiverDtlsUdpIpV4.cpp
    ipfix/IpfixReceiverDtlsSctpIpV4.cpp
    ipfix/IpfixReceiverFile.cpp
    ipfix/IpfixReceiverFileCfg.cpp
    ipfix/IpfixReceiverTcpIpV4.cpp
    ipfix/IpfixRawdirReader.cpp
    ipfix/IpfixReceiver.cpp
    ipfix/IpfixRecord.cpp
    ipfix/IpfixPrinter.cpp
    ipfix/IpfixParser.cpp
    ipfix/IpfixCollector.cpp
    ipfix/IpfixSender.cpp
    ipfix/IpfixRawdirWriter.cpp
    ipfix/TemplateBuffer.cpp
    ipfix/IpfixRecordDestination.cpp
    ipfix/IpfixSampler.cpp
    ipfix/IpfixPayloadWriter.cpp
    ipfix/IpfixRecordAnonymizer.cpp
    ipfix/NetflowV9Converter.cpp
    ipfix/aggregator/PacketAggregatorCfg.cpp
    ipfix/aggregator/AggregatorBaseCfg.cpp
    ipfix/aggregator/IpfixAggregatorCfg.cpp
    ipfix/aggregator/BaseAggregator.cpp
    ipfix/aggregator/BaseHashtable.cpp
    ipfix/aggregator/PacketHashtable.cpp
    ipfix/aggregator/FlowHashtable.cpp
    ipfix/aggregator/IpfixAggregator.cpp
    ipfix/aggregator/PacketAggregator.cpp
    ipfix/aggregator/Rules.cpp
    ipfix/aggregator/Rule.cpp

    ipfix/database/IpfixDbWriterSQL.cpp
    ipfix/database/IpfixDbWriterCfg.cpp
    ipfix/database/IpfixDbWriterMongo.cpp
    ipfix/database/IpfixDbWriterMongoCfg.cpp
    ipfix/database/IpfixDbWriterOracle.cpp
    ipfix/database/IpfixDbReaderCfg.cpp
    ipfix/database/IpfixDbReader.cpp
    ipfix/database/IpfixDbReaderMySQL.cpp
    ipfix/database/IpfixDbWriterMySQL.cpp
    ipfix/database/IpfixDbWriterPg.cpp
    ipfix/database/IpfixDbReaderOracle.cpp
    ipfix/database/IpfixFlowInspectorExporterCfg.cpp
    ipfix/database/IpfixFlowInspectorExporter.cpp
)

add_cppcheck(modules STYLE POSSIBLE_ERROR)
